--- a/indexBootstrap.html
+++ b/indexBootstrap.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-lg-4">
-              <div class="about-me">
+              <div class="about-him">
                 <h1>About me</h1>
                 <p>
                   Emmanue P. Javellana Jr. Is a freelancer with 3 years of
