--- a/indexBootstrap.html
+++ b/indexBootstrap.html
@@ -47,8 +47,8 @@
             </div>
 
             <div class="col-lg-4">
-              <div class="about-him">
-                <h1>About me</h1>
+              <div class="about-me">
+                <h1>About him</h1>
                 <p>
                   Emmanue P. Javellana Jr. Is a freelancer with 3 years of
                   experience in photoshop, Illustrator, Indesign. I have design
