--- a/indexBootstrap.html
+++ b/indexBootstrap.html
@@ -85,7 +85,7 @@
           <ul>
             <li>
               <h2>
-                3 year Freelance 
+                3 years Freelance 
               </h2>
               <p>
                 <!-- Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
